Better package naming for cross-project compatibility